Newer, better styling is not a good as advertised.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -9,6 +9,12 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="style2.css">
+        <style type="text/css" media="print">
+            @page {
+                size: auto;   /* auto is the initial value */
+                margin: 0;  /* this affects the margin in the printer settings */
+            }
+        </style>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -572,7 +578,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
-                        	I made this before I found SpotBright.  Keeps track of the ever changing Microsoft Windows 10 lock screen background images, and copies the new images to a seperate folder based on characterisics
+                        	Keeps track of the ever changing Microsoft Windows 10 lock screen background images, and copies the new images to a seperate folder based on characterisics
                         </div>
                     </div>
                 </div>
@@ -614,7 +620,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
-                        	Based on a Visual Basic Script that I wrote in college.  Downloads the media portion of a podcast feed
+                        	Downloads the media portion of a podcast feed
                         </div>
                     </div>
                 </div>
@@ -641,7 +647,7 @@
                 <div class="row grey-backgroud">
                     <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
-                            HTTPUtils
+                            HTTPDownloadUtils
                         </div>
                     </div>
                     <div class="col-md-4">
@@ -757,7 +763,28 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
-                            Occasionally, my wifi router would loose the internet and the simplest way to repair the problem was to restart the router, so I wrote a script to periodically check if I had a connection, and restart the router if the connection was ever down
+                            Restarts a faulty router every time that it loses the internet
+                        </div>
+                    </div>
+                </div>
+
+               <div class="row">
+                    <div class="col-md-12">
+                        <div class="font-primary location">                            
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-md-11">
+                        <div class="italic fg-secondary">
+                            <ul>
+                                <li>
+                                    Based around Selenium and Chrome Web Driver
+                                </li>
+                                <li>
+                                    Reduced failed offsite backups until replacement arrived
+                                </li>
+                            </ul>
                         </div>
                     </div>
                 </div>
@@ -779,7 +806,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
-                        	Uses Fast Fourier Transformation Library to generate acoustic fingerprints, and then identify places of repetition in audio based on said fingerprints
+                        	Uses a Fast Fourier Transformation Library to generate acoustic fingerprints, and then identify places of repetition in audio based on said fingerprints
                         </div>
                     </div>
                 </div>
