Working on page break fixing.

--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -9,6 +9,11 @@
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
         <link rel="stylesheet" href="style2.css">
+        <style type = "text/css">
+   <!--
+      @page{orphans:4; widows:2;}
+   -->
+</style>
 
         <!-- Optional JavaScript -->
         <!-- jQuery first, then Popper.js, then Bootstrap JS -->
@@ -249,6 +254,16 @@
                     <div class="col-md-8">
                         <div class="footer-space">
                         </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="page-break">
+            <div class="row">
+                <div class="col-md-12">
+
+                    <div class="header-space-border">
                     </div>
                 </div>
             </div>
