--- a/résumé-expanded-color-2.html
+++ b/résumé-expanded-color-2.html
@@ -8,7 +8,7 @@
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
-        <link rel="stylesheet" href="style2.css">
+        <link rel="stylesheet" href="css/style2.css">
         <style type = "text/css">
    <!--
       @page{orphans:4; widows:2;}
