--- a/résumé-timeline.html
+++ b/résumé-timeline.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <link rel="stylesheet" type="text/css" href="dep/normalize.css/normalize.css" />
     <link rel="stylesheet" type="text/css" href="dep/Font-Awesome/css/font-awesome.css" />
-    <link rel="stylesheet" type="text/css" href="style-timeline.css" />
+    <link rel="stylesheet" type="text/css" href="css/style-timeline.css" />
   </head>
   <body lang="en">
     <section id="main">
