Trying to make a one page version of the resume.

--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
 <p>
 	<a href="résumé-expanded-color-2.html">Bloated Résumé</a>
 </p>
+<p>
+	<a href="résumé-expanded-color-3.html">One Page With Projects Résumé</a>
+</p>
 </body>
 </html>
