--- a/résumé-expanded-color-3.html
+++ b/résumé-expanded-color-3.html
@@ -50,48 +50,10 @@
         </div>
         <div class="row">
             <div class="col-md-3">
-                <div class="row section-header header-underline">
-                    <div class="font-primary col-md-12 fg-primary uppercase medium">
-                        Skills
-                    </div>
-                    <div class="col-md-12">
-                        <div class="section-header-underline underline-full underline-thin underline-section">
-                        </div>
-                    </div>
-                </div>
             </div>
             <div class="col-sm">
-                <!-- <div class="font-primary item-name bold job-title"> -->
                 <div class="italic fg-secondary">
-                    <ul>
-                        <li>
-                            Core: Java 7 and 8, .Net Framework 4.6, Python, OOP, Spring, Web Services, Rest API
-                        </li>
-                        <li>
-                            Database: MySQL, Postgres, Spring JDBC, Hibernate
-                        </li>
-                        <li>
-                            Testing: jUnit, Mockito
-                        </li>
-                        <li>
-                            Version Control: Git, BitBucket, GitHub
-                        </li>
-                        <li>
-                            IDE: Intellij, Netbeans, VSCode, Sublime Text
-                        </li>
-                        <li>
-                            Server: Apache Tomcat
-                        </li>
-                        <li>
-                            Tools: Maven, Gradle, Jenkins, TravisCI, JIRA, BASH
-                        </li>
-                        <li>
-                            Front End: HTML, CSS, JS, jQuery, Bootstrap 3 & 4, AJAX, JSP, Thymeleaf, JSON
-                        </li>
-                        <li>
-                            Business: Agile methodology, TDD, requirements gathering, documentation, analysis
-                        </li>
-                    </ul>
+                        Java • .Net Framework • Python çx☺☻♥♦♣♠•◘○◙♂♀♪♫☼►◄↕‼¶
                     <div class="footer-space">
                     </div>
                 </div>
