Still not quite right, but improving.

--- a/résumé-expanded-color-3.html
+++ b/résumé-expanded-color-3.html
@@ -44,9 +44,9 @@
                     </div>
             </div>
             <div class="row">
-                <div class="col-sm-4">
+                <div class="col-sm-3">
                 </div>
-                <div class="col-sm-2 col-sm-2-offset-3">
+                <div class="col-sm-2">
                     <div class="my-email text-center font-weight-bold sm-info">
                         <span class="sm-icon sm-icon-mail"></span> <span class="sm-info-text">ATegtmei@gmail.com</span>
                     </div>
@@ -56,11 +56,7 @@
                         <span class="sm-icon sm-icon-phone"></span> <span class="sm-info-text">(509) 557-0668</span>
                     </div>
                 </div>
-                <div class="col-sm-4">
-                </div>
-                <div class="col-sm-5">
-                </div>
-                <div class="col-sm-2">
+                <div class="col-sm-1">
                     <div class="my-github col-sm text-center font-weight-bold sm-info">
                         <span class="sm-icon sm-icon-github"></span> <span class="sm-info-text">github.com/ategt</span>
                     </div>
@@ -235,16 +231,6 @@
             </div>
         </div>
 
-        <div class="page-break">
-            <div class="row">
-                <div class="col-md-12">
-
-                    <div class="header-space-border">
-                    </div>
-                </div>
-            </div>
-        </div>
-
         <div class="row">
             <div class="col-md-3">
                 <div class="row section-header header-underline">
@@ -258,51 +244,6 @@
                 </div>
             </div>
             <div class="col-sm">
-                <div class="row grey-backgroud">
-                    <div class="col-md-8">
-                        <div class="font-primary item-name bold job-title">
-                            Flight Tracker
-                        </div>
-                    </div>
-                    <div class="col-md-4">
-                        <div class="date-range">
-                            
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
-                        <div class="project-summary italic fg-secondary font-primary inline-block italic fg-secondary">
-                        	Made to follow the air planes that fly over my house
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="image-container-2">
-                        <div class="image-holder-2"></div>
-                    </div>
-                    <div class="col-md-12">
-                        <div class="font-primary project-location">                            
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-11">
-                        <div class="italic fg-secondary">
-                            <ul>
-                                <li>
-                            		Uses realtime aircraft tracking data
-                                </li>
-                                <li>
-                                    Simple, efficient caching image rotation approach
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-                <div class="footer-space">
-                </div>
-
                 <div class="row grey-backgroud">
                     <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
@@ -320,7 +261,7 @@
                         <div class="image-holder-3"></div>
                     </div>
                     <div class="col-md-12">
-                        <div class="project-summary italic fg-secondary font-primary inline-block italic fg-secondary">
+                        <div class="project-summary font-primary inline-block italic fg-secondary">
                             Generates Original Sudoku Puzzles
                         </div>
                     </div>
@@ -365,7 +306,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="project-summary italic fg-secondary font-primary inline-block italic fg-secondary">
+                        <div class="project-summary font-primary inline-block italic fg-secondary">
                             A whimsical excuse to learn HTML5's canvas API
                         </div>
                     </div>
@@ -407,7 +348,7 @@
                 </div>
                 <div class="row">
                     <div class="col-md-12">
-                        <div class="project-summary italic fg-secondary font-primary inline-block italic fg-secondary">
+                        <div class="project-summary font-primary inline-block italic fg-secondary">
                         	Built to better understand the android operating system's intent object
                         </div>
                     </div>
