Also, still not quite right, but improving.

--- a/résumé-expanded-color-3.html
+++ b/résumé-expanded-color-3.html
@@ -100,15 +100,13 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md-auto">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
                             WinVale Services
                             <div class="logo-0"></div>
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md">
                         <div class="font-primary location">
                             Wooster, Ohio
                         </div>
@@ -170,14 +168,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
                             Sunny Side Feeds
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md">
                         <div class="font-primary location">
                             West Salem, Ohio
                         </div>
@@ -204,14 +200,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
                             Cedar Lane Farms
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md">
                         <div class="font-primary location">
                             Wooster, Ohio
                         </div>
@@ -408,14 +402,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md">
                         <div class="employer-title font-primary inline-block italic fg-secondary">
                             12 Week Coding Bootcamp
                         </div>
                     </div>
-                </div>
-                <div class="row">
-                    <div class="col-md-12">
+                    <div class="col-md">
                         <div class="font-primary project-location">
                             Akron, Ohio
                         </div>
