Several text blocks unset. Not as good as hoped.

--- a/résumé-expanded-color-3.html
+++ b/résumé-expanded-color-3.html
@@ -25,28 +25,9 @@
                 </div>
             </div>
             <div class="row">
-                    <div class="col-sm-3 text-center font-weight-bold sm-info-text">
-                    </div>
-                    <div class="col-sm-1 text-center font-weight-bold sm-info-text">
-                        Java
-                    </div>
-                    <div class="col-sm-1 text-center font-weight-bold sm-info-text">
-                        • 
-                    </div>
-                     <div class="col-sm-2 text-center font-weight-bold sm-info-text">
-                        .Net Framework
-                    </div>
-                     <div class="col-sm-1 text-center font-weight-bold sm-info-text">
-                        • 
-                    </div>
-                    <div class="col-sm-1 text-center font-weight-bold sm-info-text">
-                        Python
-                    </div>
-            </div>
-            <div class="row">
-                <div class="col-sm-3">
+                <div class="col-sm-4">
                 </div>
-                <div class="col-sm-2">
+                <div class="col-sm-2 col-sm-2-offset-3">
                     <div class="my-email text-center font-weight-bold sm-info">
                         <span class="sm-icon sm-icon-mail"></span> <span class="sm-info-text">ATegtmei@gmail.com</span>
                     </div>
@@ -56,7 +37,11 @@
                         <span class="sm-icon sm-icon-phone"></span> <span class="sm-info-text">(509) 557-0668</span>
                     </div>
                 </div>
-                <div class="col-sm-1">
+                <div class="col-sm-4">
+                </div>
+                <div class="col-sm-5">
+                </div>
+                <div class="col-sm-2">
                     <div class="my-github col-sm text-center font-weight-bold sm-info">
                         <span class="sm-icon sm-icon-github"></span> <span class="sm-info-text">github.com/ategt</span>
                     </div>
