Almost done with this version of the one page.

--- a/résumé-expanded-color-3.html
+++ b/résumé-expanded-color-3.html
@@ -7,7 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
         <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
         <link rel="stylesheet" href="css/style2.css">
 
         <!-- Optional JavaScript -->
@@ -44,17 +44,6 @@
                 <div class="col-sm-2">
                     <div class="my-github col-sm text-center font-weight-bold sm-info">
                         <span class="sm-icon sm-icon-github"></span> <span class="sm-info-text">github.com/ategt</span>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-3">
-            </div>
-            <div class="col-sm">
-                <div class="italic fg-secondary">
-                        
-                    <div class="footer-space">
                     </div>
                 </div>
             </div>
@@ -138,8 +127,6 @@
                         Dramatically expaned test coverage in all areas
                     </li>
                 </ul>
-                <div class="footer-space">
-                </div>
                 <div class="row grey-backgroud">
                     <div class="col-md-8">
                         <div class="font-primary item-name bold job-title">
@@ -168,9 +155,10 @@
                     <li>
                         Merged Old and New Technologies
                     </li>
+                    <li>
+                        Handled Many Different Resposibilities in a Startup like environment
+                    </li>
                 </ul>
-                <div class="footer-space">
-                </div>
 
                 <div class="row grey-backgroud">
                     <div class="col-md-8">
@@ -201,12 +189,6 @@
                         Five Years at One Firm
                     </li>
                 </ul>
-                <div class="row">
-                    <div class="col-md-8">
-                        <div class="footer-space">
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
 
@@ -246,12 +228,6 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="font-primary project-location">                            
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-11">
                         <div class="italic fg-secondary">
                             <ul>
@@ -268,8 +244,6 @@
                         </div>
                     </div>
                 </div>
-                <div class="footer-space">
-                </div>
 
                 <div class="row grey-backgroud">
                     <div class="col-md-8">
@@ -284,18 +258,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="project-summary font-primary inline-block italic fg-secondary">
-                            A whimsical excuse to learn HTML5's canvas API
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
                     <div class="image-container-4">
                         <div class="image-holder-4"></div>
                     </div>
                     <div class="col-md-12">
-                        <div class="font-primary project-location">                            
+                        <div class="project-summary font-primary inline-block italic fg-secondary">
+                            A whimsical excuse to learn HTML5's canvas API
                         </div>
                     </div>
                 </div>
@@ -309,8 +277,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <div class="footer-space">
                 </div>
 
                 <div class="row grey-backgroud">
@@ -333,12 +299,6 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-md-12">
-                        <div class="font-primary project-location">
-                        </div>
-                    </div>
-                </div>
-                <div class="row">
                     <div class="col-md-11">
                         <div class="italic fg-secondary">
                             <ul>
@@ -354,8 +314,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <div class="footer-space">
                 </div>
 
             </div>
@@ -420,8 +378,6 @@
                             </ul>
                         </div>
                     </div>
-                </div>
-                <div class="footer-space">
                 </div>
 
             </div>
