Updated the one page version for upper and lower case text.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
 	<a href="résumé-expanded-color-2.html">Bloated Résumé</a>
 </p>
 <p>
-	<a href="résumé-expanded-color-3.html">One Page With Projects Résumé</a>
+	<a href="résumé-expanded-color-3-upper.html">One Page With Projects Résumé</a>
+</p>
+<p>
+	<a href="résumé-expanded-color-3.html">(One Page With Projects Résumé - Most text in lower case)</a>
 </p>
 </body>
 </html>
