Added print version of resume.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 	<a href="résumé-timeline.html">Timeline Résumé</a>
 </p>
 <p>
+	<a href="résumé-expanded.html">Print Résumé</a>
+</p>
+<p>
 	<a href="résumé-expanded-color.html">Color Résumé</a>
 </p>
 <p>
